tests/interpreter_directive/test.js
// @flow

1 as string; // error
